# bluetooth-daq

./: README.md
docs/: DIO Module Design Doc.docx  bluetooth-daq-design.drawio  daq-python-framework.drawio
hardware/analog_submodule/analog_submodule/: analog_submodule-B_Cu.gbr  analog_submodule-B_Mask.gbr  analog_submodule-Edge_Cuts.gbr  analog_submodule-F_Paste.gbr  analog_submodule-F_Silkscreen.gbr  analog_submodule-NPTH-drl_map.ps  analog_submodule-PTH-drl_map.ps  analog_submodule-job.gbrjob  analog_submodule.kicad_pcb  analog_submodule.kicad_prl  analog_submodule.kicad_pro  analog_submodule.kicad_sch  fp-lib-table  sym-lib-table
hardware/analog_submodule/analog_submodule_manufacturing_files/: analog_submodule-B_Paste.gbr  analog_submodule.rpt  (+7 more)
hardware/digital_submodule/: BoM_digital_submodule.xlsx
software/bluetooth-daq-lp-em-cc2340r5/: cc2340r5_oad.uniflash
software/python/: bdaq.py
software/python/pybledaq/: log.txt  pyproject.toml
software/python/pybledaq/src/bdaq/: __init__.py  bdaq.py
software/python/pybledaq/src/bdaq.egg-info/: PKG-INFO  SOURCES.txt
software/python/pybledaq/src/bdaq/analog/: __init__.py  analog.py
software/python/pybledaq/src/bdaq/core/: bluetooth_daq.yml  core.py  initiator.py
software/python/pybledaq/src/bdaq/dio/: dio.py
software/python/pybledaq/src/bdaq/i2c/: i2c.py
software/python/pybledaq/src/bdaq/spi/: __init__.py  spi.py
software/python/pybledaq/src/bdaq/uart/: uart.py
software/python/pybledaq/tests/: bluetooth_daq_config.yml  test_analog.py  test_core.py  test_dio.py  test_i2c.py  test_spi.py  test_uart.py
(+509 files in other folders)
