[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bdaq"
version = "0.1.0"
description = "Bluetooth DAQ Python API"
readme = "README.md"
authors = [{name = "Your Name"}]
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]